--- a/privacy.html
+++ b/privacy.html
@@ -2477,7 +2477,7 @@
 								<p><strong>Contact details for parties you invite. </strong>If you decide to invite
 									someone else to create an account on the Service, we will collect your and the third
 									party’s names and email addresses to send an email and follow up with the third
-									party. You or the third party may contact us at support@tvcast.in to request
+									party. You or the third party may contact us at info@piggy-games.com to request
 									deletion of the other party’s information. By inviting someone else to use the
 									Service, you confirm that you have that person’s permission to do so.</p>
 								<p></p>
@@ -2910,7 +2910,7 @@
 								&nbsp;
 								<p></p>
 								<p></p>
-								<p>Your trust is our primary concern. <a href="mailto:support@tvcast.in">Reach
+								<p>Your trust is our primary concern. <a href="mailto:info@piggy-games.com">Reach
 										out</a> with questions.</p>
 								<p>&nbsp;</p>
 								<p><strong>Last Updated: December 09, 2018</strong></p>
@@ -3533,7 +3533,7 @@
 									local law.</p>
 								<h4>10.14 Questions, Complaints, and Claims.</h4>
 								<p>If you have any questions, complaints or claims, please contact us at
-									support@tvcast.in. We will do our best to address your concerns. If you feel that
+									info@piggy-games.com. We will do our best to address your concerns. If you feel that
 									your concerns have been addressed incompletely, we invite you to let us know for
 									further investigation.</p>
 								<h4>10.15 Consumer Complaints.</h4>
