--- a/privacy.html
+++ b/privacy.html
@@ -2431,7 +2431,7 @@
 								<p></p>
 								<p></p>
 								<p>This Privacy Policy describes how Piggy Games. (“Piggy Games”) handles personal
-									information we collect about users of our website at www.tvcast.in and our mobile
+									information we collect about users of our website and our mobile
 									applications (collectively, the “Service”).</p>
 								<p></p>
 								<p></p>
@@ -2513,11 +2513,11 @@
 									features you used and links you clicked on.</p>
 								<p></p>
 								<p></p>
-								<p>See the <a style="color: #4877E0" href="https://tvcast.in/policies#_To_provide_the_1">VPN Service</a> section below
+								<p>See the <a style="color: #4877E0" href="https://sevas727.github.io/roku-terms-of-use/privacy.html">VPN Service</a> section below
 									to learn more about information we collect when you use that service.</p>
 								<p></p>
 								<p></p>
-								<p><strong><em>Cookies.</em></strong> See our <a style="color: #4877E0" href="https://tvcast.in/policies#_Cookie_Notice">Cookie Notice</a> for more
+								<p><strong><em>Cookies.</em></strong> See our <a style="color: #4877E0" href="https://sevas727.github.io/roku-terms-of-use/privacy.html">Cookie Notice</a> for more
 									information about how the Service and third party analytics providers and
 									advertisers use cookies and similar technologies to collect your information when
 									you use the Service.</p>
@@ -2557,7 +2557,7 @@
 								<p></p>
 								<p>If you use an ad-supported version of the Service, advertising companies use cookies
 									and similar technologies to collect information about how you use it, and to serve
-									you ads tailored to your interests in the Service and elsewhere. See our <a style="color: #4877E0" href="https://tvcast.in/policy#_Cookie_Notice">Cookie
+									you ads tailored to your interests in the Service and elsewhere. See our <a style="color: #4877E0" href="https://sevas727.github.io/roku-terms-of-use/privacy.html">Cookie
 										Notice</a> for more information.</p>
 								<p></p>
 								<p></p>
@@ -2599,7 +2599,7 @@
 								<p>If you use the Service, request information from us, or participate in our surveys,
 									promotions or events, we may send you Piggy Games-related marketing communications. You
 									can always opt out of these communications by following the opt-out instructions in
-									the message or by <a style="color: #4877E0" href="https://tvcast.in/policies#_Questions">contacting us</a>.</p>
+									the message or by <a style="color: #4877E0" href="https://sevas727.github.io/roku-terms-of-use/privacy.html">contacting us</a>.</p>
 								<p></p>
 								<p></p>
 								<h4>To create anonymous data</h4>
@@ -2671,7 +2671,7 @@
 								<p></p>
 								<p>We may disclose information about you as we believe appropriate to government or law
 									enforcement officials or private parties (a) for the security, compliance, fraud
-									prevention and safety purposes <a style="color: #4877E0" href="https://tvcast.in/policies#_For_compliance,_fraud">described above</a>; (b)
+									prevention and safety purposes <a style="color: #4877E0" href="https://sevas727.github.io/roku-terms-of-use/roku-terms-of-use.html">described above</a>; (b)
 									as required by law, lawful requests or legal process; (c) where permitted by law in
 									connection with any legal investigation; and (d) to prosecute or defend legal
 									claims.</p>
@@ -2899,7 +2899,7 @@
 								<p></p>
 								<p></p>
 								<p>For more information about how we collect, use and share your personal information,
-									see our <a href="https://tvcast.in/policies#_top">Privacy Policy</a>.</p>
+									see our <a href="https://sevas727.github.io/roku-terms-of-use/roku-terms-of-use.html">Privacy Policy</a>.</p>
 								<p></p>
 								&nbsp;
 								<p></p>
@@ -2920,8 +2920,7 @@
 									ANY OTHER WEBSITES OF Piggy Games (COLLECTIVELY, THE <strong>“WEBSITE”</strong>), AND
 									THE SERVICE AND APPLICATIONS DESCRIBED IN THESE TERMS. BY ACCESSING OR USING THE
 									WEBSITE IN ANY WAY, INCLUDING USING THE SERVICES AND RESOURCES AVAILABLE OR ENABLED
-									VIA THE WEBSITE OR APPLICATIONS (THE<strong> “SERVICE”</strong>), DOWNLOADING THE TV
-									CAST SOFTWARE APPLICATIONS FOR MOBILE DEVICES (EACH, AN “APPLICATION”, AND
+									VIA THE WEBSITE OR APPLICATIONS (THE<strong> “SERVICE”</strong>), DOWNLOADING THE Piggy Games SOFTWARE APPLICATIONS FOR MOBILE DEVICES (EACH, AN “APPLICATION”, AND
 									COLLECTIVELY, THE<strong> “APPLICATIONS”</strong>), COMPLETING THE REGISTRATION
 									PROCESS, AND/OR MERELY BROWSING THE WEBSITE, YOU REPRESENT THAT (1) YOU HAVE READ,
 									UNDERSTAND, AND AGREE TO BE BOUND BY THE TERMS, (2) YOU ARE OF LEGAL AGE TO FORM A
@@ -2951,8 +2950,7 @@
 									that any material changes shall be effective for users who have a registered account
 									on the Website (each, a&nbsp;<strong>“Registered User”</strong>) upon the earlier of
 									thirty (30) days after posting of notice of such changes on the Website or thirty
-									(30) days after dispatch of an e-mail notice of such changes to Registered Users. TV
-									CAST may require you to agree to the updated Agreement in a manner specified before
+									(30) days after dispatch of an e-mail notice of such changes to Registered Users. Piggy Games may require you to agree to the updated Agreement in a manner specified before
 									further use of the Website or the Service is permitted. If you do not agree to any
 									change(s) after receiving a notice of such change(s), you shall stop using the
 									Website and/or the Service. Otherwise, your continued use of the Website and/or
@@ -3072,8 +3070,7 @@
 									your place of residence or any other applicable jurisdiction. You agree that you
 									shall monitor your Account to restrict use by minors, and you will accept full
 									responsibility for any unauthorized use of the Piggy Games Properties by minors. If you
-									provide any information that is untrue, inaccurate, not current or incomplete, or TV
-									CAST has reasonable grounds to suspect that such information is untrue, inaccurate,
+									provide any information that is untrue, inaccurate, not current or incomplete, or Piggy Games has reasonable grounds to suspect that such information is untrue, inaccurate,
 									not current or incomplete, Piggy Games has the right to suspend or terminate your
 									Account and refuse any and all current or future use of the Piggy Games Properties (or
 									any portion thereof). You agree not to create an Account using a false identity or
@@ -3115,11 +3112,9 @@
 									system or network; (iii) is unlawful, threatening, abusive, harassing, defamatory,
 									libelous, deceptive, fraudulent, invasive of another’s privacy, tortious, obscene,
 									offensive, or profane; (iv) constitutes unauthorized or unsolicited advertising,
-									junk or bulk e-mail; (v) involves commercial activities and/or sales without TV
-									CAST’s prior written consent, such as contests, sweepstakes, barter, advertising, or
+									junk or bulk e-mail; (v) involves commercial activities and/or sales without Piggy Games’s prior written consent, such as contests, sweepstakes, barter, advertising, or
 									pyramid schemes; (vi) impersonates any person or entity, including any employee or
-									representative of Piggy Games; or (vii) is inappropriate in any other manner that TV
-									CAST determines in its sole, reasonable discretion.</p>
+									representative of Piggy Games; or (vii) is inappropriate in any other manner that Piggy Games determines in its sole, reasonable discretion.</p>
 								<h4><strong>6. Fees and Purchase Terms.</strong></h4>
 								<h4>6.1 General Purpose of Terms: Sale of Service, not Software.</h4>
 								<p>The purpose of the Terms is for you to secure access to the Services. All fees set
@@ -3223,8 +3218,7 @@
 									CONNECTION WITH THE WEBSITE, THE APPLICATION, THE SOFTWARE, THE SERVICE, INCLUDING
 									WITHOUT LIMITATION, ANY DAMAGES RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER
 									OR NOT Piggy Games HAD BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES. UNDER NO
-									CIRCUMSTANCES WILL Piggy Games BE LIABLE TO YOU FOR MORE THAN THE AMOUNT RECEIVED BY TV
-									CAST AS A RESULT OF YOUR USE OF THE SERVICE DURING THE TWELVE-MONTH PERIOD PRECEDING
+									CIRCUMSTANCES WILL Piggy Games BE LIABLE TO YOU FOR MORE THAN THE AMOUNT RECEIVED BY Piggy Games AS A RESULT OF YOUR USE OF THE SERVICE DURING THE TWELVE-MONTH PERIOD PRECEDING
 									THE DATE ON WHICH YOU FIRST ASSERT YOU CLAIM. IF YOU HAVE NOT PAID Piggy Games ANY
 									AMOUNTS DURING SUCH PERIOD, Piggy Games’S SOLE AND EXCLUSIVE LIABILITY SHALL BE LIMITED
 									TO FIFTY DOLLARS ($50.00).</p>
@@ -3246,12 +3240,10 @@
 									governmental request; (2) enforce the Terms; (3) respond to any claims that Your
 									Content violates the rights of third parties; (4) respond to your requests for
 									customer service; or (5) protect the rights, property or personal safety of Piggy Games,
-									its Users or the public, and all enforcement or other government officials, as TV
-									CAST in its sole discretion believes to be necessary or appropriate.</p>
+									its Users or the public, and all enforcement or other government officials, as Piggy Games in its sole discretion believes to be necessary or appropriate.</p>
 								<h4>9.2 Breach.</h4>
 								<p>In the event that Piggy Games determines, in its sole discretion, that you have breached
-									any portion of the Terms, or have otherwise demonstrated inappropriate conduct, TV
-									CAST reserves the right to:</p>
+									any portion of the Terms, or have otherwise demonstrated inappropriate conduct, Piggy Games reserves the right to:</p>
 								<p><strong>(a)</strong> Warn you via e-mail (to any e-mail address you have provided to
 									Piggy Games) that you have violated the Terms;</p>
 								<p><strong>(b)</strong> Delete any of Your Content provided by you or your agent(s) to
@@ -3465,8 +3457,7 @@
 								<h4>10.11 Accessing and Download the Application from iTunes.</h4>
 								<p>The following applies to any App Store Sourced Application accessed through or
 									downloaded from the Apple App Store:</p>
-								<p>(a) You acknowledge and agree that (i) the Terms are concluded between you and TV
-									CAST only, and not Apple, and (ii) Piggy Games, not Apple, is solely responsible for the
+								<p>(a) You acknowledge and agree that (i) the Terms are concluded between you and Piggy Games only, and not Apple, and (ii) Piggy Games, not Apple, is solely responsible for the
 									App Store Sourced Application and content thereof. Your use of the App Store Sourced
 									Application must comply with the App Store Terms of Service.</p>
 								<p>(b) You acknowledge that Apple has no obligation whatsoever to furnish any
@@ -3488,8 +3479,7 @@
 									consumer protection or similar legislation.</p>
 								<p>(e) You and Piggy Games acknowledge that, in the event of any third party claim that the
 									App Store Sourced Application or your possession and use of that App Store Sourced
-									Application infringes that third party’s intellectual property rights, as between TV
-									CAST and Apple, Piggy Games, not Apple, will be solely responsible for the
+									Application infringes that third party’s intellectual property rights, as between Piggy Games and Apple, Piggy Games, not Apple, will be solely responsible for the
 									investigation, defense, settlement and discharge of any such intellectual property
 									infringement claim to the extent required by the Terms.</p>
 								<p>(f) You and Piggy Games acknowledge and agree that Apple, and Apple’s subsidiaries, are
@@ -3503,8 +3493,7 @@
 									Application.</p>
 								<h4>10.12 Export Control.</h4>
 								<p>You may not use, export, import, or transfer the Piggy Games Properties except as
-									authorized by U.S. law, the laws of the jurisdiction in which you obtained the TV
-									CAST Properties, and any other applicable laws. In particular, but without
+									authorized by U.S. law, the laws of the jurisdiction in which you obtained the Piggy Games Properties, and any other applicable laws. In particular, but without
 									limitation, the Piggy Games Properties may not be exported or re-exported (a) into any
 									United States embargoed countries, or (b) to anyone on the U.S. Treasury
 									Department’s list of Specially Designated Nationals or the U.S. Department of
@@ -3525,8 +3514,7 @@
 								<p>The Piggy Games Properties can be accessed from countries around the world and may
 									contain references to Services and Content that are not available in your country.
 									These references do not imply that Piggy Games intends to announce such Services or
-									Content in your country. The Piggy Games Properties are controlled and offered by TV
-									CAST from its facilities in the United States of America. Piggy Games makes no
+									Content in your country. The Piggy Games Properties are controlled and offered by Piggy Games from its facilities in the United States of America. Piggy Games makes no
 									representations that Piggy Games Properties are appropriate or available for use in
 									other locations. Those who access or use the Piggy Games Properties from other
 									jurisdictions do so at their own volition and are responsible for compliance with
